# xninja

./: readme.md
xninja.blockchain/: Cargo.toml  README.md
xninja.blockchain/contracts/cw-controller/: Cargo.toml  README.md
xninja.blockchain/contracts/cw-controller/src/: contract.rs  error.rs  msg.rs  state.rs
xninja.blockchain/scripts/: optimizer.sh
xninja.chain/: .gitignore
xninja.chain/injective-ts/: .env.example  package.json  tsconfig.json
xninja.chain/injective-ts/src/: query.ts  transaction.ts  transaction_send.ts
xninja.dash/: env-example  ni18n.config.ts.js  package.json
xninja.dash/config/: index.tsx
xninja.dash/lib/: address.ts  db.ts  game-config.ts
xninja.dash/pages/: _app.tsx  chart.tsx  custom.tsx  index.tsx  queue_convert.tsx
xninja.dash/store/: themeConfigSlice.tsx
xninja.ext/extension-main/: .gitignore  buildAndCopy.js  glob.js  package-lock.json  package.json  tailwind.config.ts
xninja.ext/game-client/: .env-example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
xninja.rest/: .env.example  .gitignore  deploy-rest.sh  package-lock.json  package.json
xninja.rest/src/: app.config.ts  config.ts  index.ts  oauth.ts
xninja.tech/: .gitignore
xninja.tech/cfg_nginx/: app-stg.xninja.tech  app.xninja.tech  xninja.tech
xninja.tech/dapp/: App.tsx  package.json  process.d.ts  tailwind.config.js  theme.config.tsx
xninja.tech/dashboard_webs/: App.tsx  package.json
xninja.tech/fiapp/: App.tsx  package.json  process.d.ts  tailwind.config.js  tsconfig.json
xninja.tech/game-client/: .env-example  index.html  package.json  vite.config.ts
xninja.tech/game-server/: .env.example  package.json  script.sh  tsconfig.json
xninja.tech/landing-v2/: package.json  tailwind.config.ts  tsconfig.json
xninja.tech/xninja/: manifest.json
xninja.tools/: .example-env  package.json  tsconfig.json
xninja.webapp/: .env-example  .gitignore  index.html  package.json  vite.config.ts
xninja.webapp/src/: App.tsx  main.tsx  tailwind.css
(+222 files in other folders)
