[package]
name = "cw-controller"
version = "1.0.1"
authors = ["Kage Oro <xninja.blockchain@gmail.com>"]
edition = "2021"
description = "This smart contract facilitates cotroller on xNinja.Tech."
license = "Apache-2.0"
repository = "https://github.com/xninja-lab"
homepage = "https://xninja.tech"
documentation = "https://docs.xninja.tech"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.5.3" }
cw-utils = "1.0.3"
cw2 = { path = "../../packages/cw2", version = "1.1.2" }
cw4 = { path = "../../packages/cw4", version = "1.1.2" }
cw20 = { path = "../../packages/cw20", version = "1.1.2" }
cw-controllers = { path = "../../packages/controllers", version = "1.1.2" }
cw-storage-plus = "1.2.0"
cosmwasm-std = { version = "1.5.3" }
schemars = "0.8.16"
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.56" }
getrandom = { version = "0.2.12", features = ["js"] }
sha2 = "0.10.8"
cosmwasm-crypto = "1.5.3"
